--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,28 @@
 body {
   font-family: 'Merriweather', serif;
 }
+
+
+.autocomplete-element {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  border-radius: 20px;
+  outline: none !important;
+}
+
+.ant-select-selector {
+  background-color: transparent !important;
+}
+
+.autocomplete-popup {
+  background-color: #E6E5D9;
+}
+
+.ant-select-focused .ant-select-selector,
+.ant-select-selector:focus,
+.ant-select-selector:active,
+.ant-select-selector:hover,
+.ant-select-open .ant-select-selector {
+border-color: #d9d9d9 !important;
+box-shadow: none !important;
+}
